openshift-client/src/test/resources/test-list.yml
#
# Copyright (C) 2015 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The web server's http port.
    labels:
      application: eap-app
      template: eap6-basic-sti
    name: eap-app
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentConfig: eap-app
- apiVersion: v1
  id: eap-app-http-route
  kind: Route
  metadata:
    annotations:
      description: Route for application's http service.
    labels:
      application: eap-app
      template: eap6-basic-sti
    name: eap-app-http-route
  spec:
    to:
      name: eap-app
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      application: eap-app
      template: eap6-basic-sti
    name: eap-app
- apiVersion: v1
  kind: BuildConfig
  metadata:
    labels:
      application: eap-app
      template: eap6-basic-sti
    name: eap-app
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: eap-app:latest
    source:
      contextDir: kitchensink
      git:
        ref: 6.4.x
        uri: https://github.com/jboss-developer/jboss-eap-quickstarts
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: jboss-eap6-openshift:6.4
          namespace: openshift
      type: Source
    triggers:
    - github:
        secret: rskBJDuc
      type: GitHub
    - generic:
        secret: 0V6SBYSs
      type: Generic
    - imageChange: {}
      type: ImageChange
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      application: eap-app
      template: eap6-basic-sti
    name: eap-app
  spec:
    replicas: 1
    selector:
      deploymentConfig: eap-app
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          application: eap-app
          deploymentConfig: eap-app
        name: eap-app
      spec:
        containers:
        - env:
          - name: OPENSHIFT_KUBE_PING_LABELS
            value: application=eap-app
          - name: OPENSHIFT_KUBE_PING_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: HORNETQ_CLUSTER_PASSWORD
            value: qFG0regA
          - name: HORNETQ_QUEUES
            value: ""
          - name: HORNETQ_TOPICS
            value: ""
          image: eap-app
          imagePullPolicy: Always
          name: eap-app
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 8888
            name: ping
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - /opt/eap/bin/readinessProbe.sh
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - eap-app
        from:
          kind: ImageStream
          name: eap-app
      type: ImageChange
